--- a/index.html
+++ b/index.html
@@ -77,5 +77,24 @@
     document.write("<br> My name is " + myName);
     document.write("<br> My name is " + myName + "<br>");
 </script>
+<h1>
+    To know Varaible Type.
+</h1>
+<script>
+    var x;
+    x = "My City Name";
+    document.write(typeof x);
+</script>
+
+<h1>
+    Contants 
+</h1>
+<script>
+    const Country = "Pakistan";
+     document.write("My Country is " + Country);
+     document.write("<br> You Can Neither Change Type of Const");
+     // if you will write now Country = Saudi Arabia; 
+    //  so it will give error in console.
+</script>
 </body>
 </html>
