--- a/nested-loop.html
+++ b/nested-loop.html
@@ -17,6 +17,26 @@
             }
             document.write("<br>")
         }
+        for(var a = 1; a <= 5; a++){
+            for(var b = 1; b <= a; b++){
+                console.time("Time");
+                document.write("*"  + " ");
+                console.warn("The Nested Loop Run Successfully");
+                console.timeEnd("Time");
+                
+            }
+            document.write("<br>")
+        }
+        for(var a = 5; a >= 1; a--){
+            for(var b = 5; b >= a; b--){
+                console.time("Time");
+                document.write(b  + " ");
+                console.warn("The Nested Loop Run Successfully");
+                console.timeEnd("Time");
+                
+            }
+            document.write("<br>")
+        }
     </script>
 </body>
 </html>
