indexOf(); and lastIndexOf(); addded successfully

--- a/array-method.html
+++ b/array-method.html
@@ -112,7 +112,17 @@
             b.splice(1, 0, "This Happened due to Splice Method");  // Insert element at index 1
             document.write("Array b after splice: " + b + "<br>");  // Display array b after splice
           </script>
-          
+
+        <h1 style="text-align: center;">Here I Use IndexOF(); & LastIndexOf(); Method</h1>
+        <script>
+            var a = ["Ali", "Ahmad" , "Owais" , "Shaheer" , "Owais" , "Adnan"];
+           var b = a.indexOf("Owais" , -1);
+           document.write(b);
+           console.log(b);
+           b = a.lastIndexOf("Owais" , -1);
+           document.write(b);
+           console.log(b);
+        </script>
 
 
 </body>
