24 September 2024 all array Methods are done

--- a/array-method.html
+++ b/array-method.html
@@ -123,7 +123,64 @@
            document.write(b);
            console.log(b);
         </script>
+        <h1 style="text-align: center;">Here I Use Include(); Method</h1>
+        <script>
+            var a = ["Khan" , "Ali" , "Zain"];
+            var b = a.includes("Ali");
+            document.write(b);
+        </script>
+        <h1 style="text-align: center;">Here I Use Some(); Method</h1>
+        <script>
+            var ages = [10 , 18 , 19 , 20 , 30];
+            var adultAge = 18;
+            var b = ages.some(checkAdult);
+            document.write(b);
+            function checkAdult(age){
+                return age >= 18;
+            }
+        </script>
+            <h1 style="text-align: center;">Here I Use Every(); Method</h1>
+            <script>
+                var ages = [10 , 18 , 19 , 20 , 30];
+                var adultAge = 18;
+                var b = ages.every(checkAdult);
+                document.write(b);
+                function checkAdult(age){
+                    return age >= 18;
+                }
+            </script>
+                <h1 style="text-align: center;">Here I Use Find(); Method</h1>
+                <script>
+                    var ages = [10 , 18 , 19 , 20 , 30];
+                    var adultAge = 18;
+                    var b = ages.find(checkAdult);
+                    document.write(b);
+                    function checkAdult(age){
+                        return age >= 18;
+                    }
+                </script>
+                 <h1 style="text-align: center;">Here I Use FindIndex(); Method</h1>
+                 <script>
+                     var ages = [10 , 18 , 19 , 20 , 30];
+                     var adultAge = 18;
+                     var b = ages.findIndex(checkAdult);
+                     document.write(b);
+                     function checkAdult(age){
+                         return age >= 18;
+                     }
+                 </script>
+                  <h1 style="text-align: center;">Here I Use Filter(); Method</h1>
+                  <script>
+                     var ages = [10, 18, 19, 20, 30];
+                    var b = ages.filter(checkAdult);
 
+                     for (var i = 0; i < b.length; i++) {
+                     document.write(b[i] + "<br><br>");
+                     }
 
+                     function checkAdult(age) {
+                     return age >= 18;
+                     }
+                  </script>
 </body>
 </html>
