--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     document.write(x + "<br>"); // 10
 }
 
-document.write(x); // Error: x is not defined
+document.write(x); // Error: x is not 
 
 </script>
 <script src="stringMethod.js"></script>
