Math Method Added Successfully

--- a/index.html
+++ b/index.html
@@ -118,5 +118,6 @@ document.write(x); // Error: x is not
 </script>
 <script src="stringMethod.js"></script>
 <script src="numbersMethod.js"></script>
+<script src="mathMethod.js"></script>
 </body>
 </html>
