--- a/index.html
+++ b/index.html
@@ -119,5 +119,6 @@ document.write(x); // Error: x is not
 <script src="stringMethod.js"></script>
 <script src="numbersMethod.js"></script>
 <script src="mathMethod.js"></script>
+<script src="dateMethod.js"></script>
 </body>
 </html>
