--- a/index.html
+++ b/index.html
@@ -115,10 +115,16 @@
 
 document.write(x); // Error: x is not 
 
+
+
 </script>
+
+<h1 class="myName">Syed Zarrar Amir</h1>
+<script src="jquery.js"></script>
 <script src="stringMethod.js"></script>
 <script src="numbersMethod.js"></script>
 <script src="mathMethod.js"></script>
 <script src="dateMethod.js"></script>
+<script src="jqueryPractise.js"></script>
 </body>
 </html>
