--- a/index.html
+++ b/index.html
@@ -120,6 +120,16 @@ document.write(x); // Error: x is not
 </script>
 
 <h1 class="myName">Syed Zarrar Amir</h1>
+<ul>
+    <li>Zarrar</li>
+    <li>Owais</li>
+    <li>Ahmad</li>
+    <li>Adnan</li>
+    <li>Basit</li>
+    <li>Ismail</li>
+    <li>Uzair</li>
+    <li>Obaid</li>
+</ul>
 <script src="jquery.js"></script>
 <script src="stringMethod.js"></script>
 <script src="numbersMethod.js"></script>
